MenuEntryMobile: Fix Kingdom wrapping

--- a/styles/MenuEntryMobile.module.css
+++ b/styles/MenuEntryMobile.module.css
@@ -80,9 +80,9 @@
 }
 
 .kingdom {
-    flex: 1 0 auto;
+    flex: 1 1 auto;
 }
 
 .author {
-    flex: 1 1 auto;
+    flex: 1 1 min-content;
 }
